Origin Repo Transferred, main branch transfer complete

--- a/BigTimeRestaurantApppp/app.json
+++ b/BigTimeRestaurantApppp/app.json
@@ -1,14 +1,7 @@
 {
   "expo": {
-    "name": "Food",
-    "slug": "food",
-    "privacy": "public",
-    "sdkVersion": "33.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "BigTimeRestaurantApp",
+    "slug": "BigTimeRestaurantApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +18,15 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      }
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
   }
 }
