--- a/BigTimeRestaurantApppp/package.json
+++ b/BigTimeRestaurantApppp/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
