All dependenicies and files set up, including MongoDB/EXPRESSAPI server files, and project bones

--- a/tracks/app.json
+++ b/tracks/app.json
@@ -3,7 +3,6 @@
     "name": "Tracks",
     "slug": "tracks",
     "privacy": "public",
-    "sdkVersion": "33.0.0",
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,11 +17,7 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.trackcompany.tracker"
-    },
-    "android": {
-      "package": "com.trackcompany.tracker"
+      "supportsTablet": true
     }
   }
 }
