--- a/tracks/package.json
+++ b/tracks/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "~2.2.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1"
+    "react-navigation-tabs": "^2.10.1",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
