--- a/tracks/package.json
+++ b/tracks/package.json
@@ -23,7 +23,8 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
-    "react-native-maps": "0.26.1"
+    "react-native-maps": "0.26.1",
+    "expo-location": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
